@@ -59,6 +59,11 @@ public:
 		@param listener Pointer to an instance of CAutoCompleteListener. 
 		*/
 	void SetListener(CAutoCompleteListener *listener);
+
+	///Adjusts the size and position of the dialog to match its content.
+	void AdjustSizeAndPosition(const int EditorLineHeight);
+
+
 // Overrides
 	// ClassWizard generated virtual function overrides
 	//{{AFX_VIRTUAL(CAutoCompleteDlg)
@@ -98,6 +103,8 @@ protected:
 	afx_msg void OnLButtonDblClk(UINT nFlags, CPoint point);
 	//}}AFX_MSG
 	DECLARE_MESSAGE_MAP()
+
+	afx_msg void OnSize(UINT nType, int cx, int cy);
 };
 
 /**
